Fixed scrollbar thumb color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,5 +51,5 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--color-gray-1);
+  background: var(--color-gray-2);
 }
